fastqc working on nextflow!

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,14 @@
 params.inputDataDir = launchDir + "/input-data"
+params.templatesDir = launchDir + "/templates"
+params.reportsDir   = launchDir + "/reports"
+params.softwareDir = launchDir + "/software"
+params.modulesDir = launchDir + "/modules"
 
 params.sampleInputFiles = params.inputDataDir + "/sample_ids.tsv"
+
+params.fastqc="${params.softwareDir}/FastQC/fastqc"
+params.trimgalore="${params.softwareDir}/TrimGalore-0.6.7/trim_galore"
+params.bwa="${params.softwareDir}/bwa-0.7.17/bwa"
+params.gatk="${params.softwareDir}/gatk-4.3.0.0/gatk"
+params.qualimap="${params.softwareDir}/qualimap_v2.2.1/qualimap"
+
