--- a/nextflow.config
+++ b/nextflow.config
@@ -13,11 +13,11 @@ params.bwa="${params.softwareDir}/bwa-0.7.17/bwa"
 params.gatk="${params.softwareDir}/gatk-4.3.0.0/gatk"
 params.qualimap="${params.softwareDir}/qualimap_v2.2.1/qualimap"
 
-singularity.enabled = true
-singularity.cacheDir = "${HOME}/.singularity"
+//singularity.enabled = true
+//singularity.cacheDir = "${HOME}/.singularity"
 
-process {
-    withName:trimSampleReads {
-        container = "${params.softwareDir}/sarek_latest.sif"
-    }
-}
+//process {
+//    withName:trimSampleReads {
+//        container = "${params.softwareDir}/sarek_latest.sif"
+//   }
+//}
