--- a/nextflow.config
+++ b/nextflow.config
@@ -1,29 +1,5 @@
-params.inputDataDir = launchDir + "/input-data"
-params.outputDataDir = launchDir + "/output-data"
-params.templatesDir = launchDir + "/templates"
-params.reportsDir = launchDir + "/reports"
-params.softwareDir = launchDir + "/software"
-params.modulesDir = launchDir + "/modules"
+includeConfig "${launchDir}/configs/project-directories.config"
+includeConfig "${launchDir}/configs/chpc.config"
+includeConfig "${launchDir}/configs/process-resources.config"
 
 params.sampleInputFiles = params.inputDataDir + "/sample_ids.tsv"
-
-params.fastqc = "${params.softwareDir}/FastQC/fastqc"
-params.trimgalore = "${params.softwareDir}/TrimGalore-0.6.7/trim_galore"
-params.bwa = "${params.softwareDir}/bwa-0.7.17/bwa"
-params.gatk = "${params.softwareDir}/gatk-4.3.0.0/gatk"
-params.qualimap = "${params.softwareDir}/qualimap_v2.2.1/qualimap"
-params.trimmomaticJar = "${params.softwareDir}/Trimmomatic-0.39/trimmomatic-0.39.jar"
-params.skewer = "${params.softwareDir}/skewer-0.2.2/skewer"
-
-//singularity.enabled = true
-//singularity.cacheDir = "${HOME}/.singularity"
-
-//process {
-//    withName:trimSampleReads {
-//        container = "${params.softwareDir}/sarek_latest.sif"
-<<<<<<< HEAD
-//   }
-=======
-//    }
->>>>>>> 9707a52834988d3cb3cd70a547137e0314e1827b
-//}
