alignment step working!

--- a/configs/process-resources.config
+++ b/configs/process-resources.config
@@ -23,4 +23,15 @@ process {
         memory = 2.GB
         time = 30.m
     }
+    withName:alignSampleReadsToReference {
+        queue = 'smp'
+        cpus = 24
+        memory = 90.GB
+        time = { 8.h * task.attempt }
+    }
+    withName:markDuplicateReads {
+        cpus = 3
+        memory = { 10.GB * task.attempt }
+        time = { 3.h * task.attempt }
+    }
 }
