--- a/configs/project-directories.config
+++ b/configs/project-directories.config
@@ -1,6 +1,8 @@
 params.inputDataDir = launchDir + "/input-data"
 params.outputDataDir = launchDir + "/output-data"
+params.referenceDataDir = launchDir + "/reference-data"
 params.templatesDir = launchDir + "/templates"
 params.reportsDir = launchDir + "/reports"
 params.softwareDir = launchDir + "/software"
 params.modulesDir = launchDir + "/modules"
+params.tmpDir = launchDir + "/tmp"
