--- a/configs/chpc.config
+++ b/configs/chpc.config
@@ -1,11 +1,11 @@
-/* software */
 params.fastqc = "${params.softwareDir}/FastQC/fastqc"
 params.trimgalore = "${params.softwareDir}/TrimGalore-0.6.7/trim_galore"
 params.bwa = "${params.softwareDir}/bwa-0.7.17/bwa"
 params.gatk = "${params.softwareDir}/gatk-4.3.0.0/gatk"
 params.qualimap = "${params.softwareDir}/qualimap_v2.2.1/qualimap"
-params.trimmomaticJar = "${params.softwareDir}/Trimmomatic-0.39/trimmomatic-0.39.jar"
-params.skewer = "${params.softwareDir}/skewer-0.2.2/skewer"
+params.samtools = "${params.softwareDir}/samtools-1.16.1/samtools"
+
+params.referenceFasta = "${params.referenceDataDir}/gatk-resource-bundle-hg38/Homo_sapiens_assembly38.fasta"
 
 executor {
     name = 'pbspro'
@@ -17,8 +17,8 @@ executor {
 
 process {
     //beforeScript = 'module load chpc/singularity/3.5.3'
-    clusterOptions = '-P CBBI1243'
-    //clusterOptions = '-P CBBI1243 -m abe -M jackmo375@gmail.com'
+    //clusterOptions = '-P CBBI1243'
+    clusterOptions = '-P CBBI1243 -m abe -M jackmo375@gmail.com'
 }
 
 report {
