created bqsr step, now need to test it

--- a/configs/process-resources.config
+++ b/configs/process-resources.config
@@ -34,4 +34,19 @@ process {
         memory = { 10.GB * task.attempt }
         time = { 3.h * task.attempt }
     }
+    withName:calculateRecalibrationModel {
+        cpus = 3
+        memory = { 35.GB * task.attempt }
+        time = { 4.h * task.attempt }
+    }
+    withName:recalibrateBases {
+        cpus = 3
+        memory = { 35.GB * task.attempt }
+        time = { 4.h * task.attempt }
+    }
+    withName:calculatePostRecalibrationModel {
+        cpus = 3
+        memory = { 35.GB * task.attempt }
+        time = { 4.h * task.attempt }
+    }
 }
