--- a/configs/chpc.config
+++ b/configs/chpc.config
@@ -6,6 +6,13 @@ params.qualimap = "${params.softwareDir}/qualimap_v2.2.1/qualimap"
 params.samtools = "${params.softwareDir}/samtools-1.16.1/samtools"
 
 params.referenceFasta = "${params.referenceDataDir}/gatk-resource-bundle-hg38/Homo_sapiens_assembly38.fasta"
+params.genomeIntervals = "${params.referenceDataDir}/gatk-resource-bundle-hg38/wgs_calling_regions.hg38.interval_list"
+params.variantDatabases = [
+    "${params.referenceDataDir}/gatk-resource-bundle-hg38/1000G_omni2.5.hg38.vcf.gz",
+    "${params.referenceDataDir}/gatk-resource-bundle-hg38/1000G_phase1.snps.high_confidence.hg38.vcf.gz",
+    "${params.referenceDataDir}/gatk-resource-bundle-hg38/hapmap_3.3.hg38.vcf.gz",
+    "${params.referenceDataDir}/gatk-resource-bundle-hg38/Homo_sapiens_assembly38.known_indels.vcf.gz",
+    "${params.referenceDataDir}/gatk-resource-bundle-hg38/Mills_and_1000G_gold_standard.indels.hg38.vcf.gz"]
 
 executor {
     name = 'pbspro'
@@ -17,8 +24,8 @@ executor {
 
 process {
     //beforeScript = 'module load chpc/singularity/3.5.3'
-    //clusterOptions = '-P CBBI1243'
-    clusterOptions = '-P CBBI1243 -m abe -M jackmo375@gmail.com'
+    clusterOptions = '-P CBBI1243'
+    //clusterOptions = '-P CBBI1243 -m abe -M jackmo375@gmail.com'
 }
 
 report {
