--- a/configs/chpc.config
+++ b/configs/chpc.config
@@ -4,6 +4,7 @@ params.bwa = "${params.softwareDir}/bwa-0.7.17/bwa"
 params.gatk = "${params.softwareDir}/gatk-4.3.0.0/gatk"
 params.qualimap = "${params.softwareDir}/qualimap_v2.2.1/qualimap"
 params.samtools = "${params.softwareDir}/samtools-1.16.1/samtools"
+params.jellyfish = "${params.softwareDir}/jellyfish-linux"
 
 params.referenceFasta = "${params.referenceDataDir}/gatk-resource-bundle-hg38/Homo_sapiens_assembly38.fasta"
 params.genomeIntervals = "${params.referenceDataDir}/gatk-resource-bundle-hg38/wgs_calling_regions.hg38.interval_list"
