working on variant calling over intervals

--- a/configs/chpc.config
+++ b/configs/chpc.config
@@ -16,17 +16,23 @@ params.variantDatabases = [
     "${params.referenceDataDir}/gatk-resource-bundle-hg38/Mills_and_1000G_gold_standard.indels.hg38.vcf.gz"]
 
 executor {
+    name = 'local'
+}
+
+/*
+executor {
     name = 'pbspro'
     queue = 'serial'
     queueSize = 9
-    /* actually on CHPC we are allowed 10, but the nextflow job itself
-       also must be qsubbed so we specify 10 - 1 = 9 here*/
+    // actually on CHPC we are allowed 10, but the nextflow job itself
+    // also must be qsubbed so we specify 10 - 1 = 9 here
 }
+*/
 
 process {
     //beforeScript = 'module load chpc/singularity/3.5.3'
-    clusterOptions = '-P CBBI1243'
-    //clusterOptions = '-P CBBI1243 -m abe -M jackmo375@gmail.com'
+    //clusterOptions = '-P CBBI1243'
+    clusterOptions = '-P CBBI1243 -m abe -M jackmo375@gmail.com'
 }
 
 report {
