--- a/configs/process-resources.config
+++ b/configs/process-resources.config
@@ -36,17 +36,32 @@ process {
     }
     withName:calculateRecalibrationModel {
         cpus = 3
-        memory = { 35.GB * task.attempt }
-        time = { 4.h * task.attempt }
+        memory = { 70.GB * task.attempt }
+        time = { 8.h * task.attempt }
     }
     withName:recalibrateBases {
         cpus = 3
-        memory = { 35.GB * task.attempt }
-        time = { 4.h * task.attempt }
+        memory = { 70.GB * task.attempt }
+        time = { 8.h * task.attempt }
     }
     withName:calculatePostRecalibrationModel {
         cpus = 3
-        memory = { 35.GB * task.attempt }
-        time = { 4.h * task.attempt }
+        memory = { 75.GB * task.attempt }
+        time = { 8.h * task.attempt }
+    }
+    withName:callVariantsPerSample {
+        cpus = 3
+        memory = 110.GB
+        time = { 16.h * task.attempt }
+    }
+    withName:consolidateSampleGVCFs {
+        cpus = 3
+        memory = 75.GB
+        time = 8.h
+    }
+    withName:jointCallCohortVariants {
+        cpus = 3
+        memory = 75.GB
+        time = 8.h
     }
 }
