--- a/configs/process-resources.config
+++ b/configs/process-resources.config
@@ -49,19 +49,24 @@ process {
         memory = { 75.GB * task.attempt }
         time = { 8.h * task.attempt }
     }
-    withName:callVariantsPerSample {
+    withName:callVariantsPerIntervalPerSample {
         cpus = 3
-        memory = 110.GB
-        time = { 16.h * task.attempt }
+        memory = 30.GB
+        time = { 8.h * task.attempt }
     }
-    withName:consolidateSampleGVCFs {
+    withName:consolidateSampleGVCFsPerInterval {
         cpus = 3
-        memory = 75.GB
+        memory = 30.GB
         time = 8.h
     }
-    withName:jointCallCohortVariants {
+    withName:jointCallCohortVariantsPerInterval {
         cpus = 3
-        memory = 75.GB
+        memory = 30.GB
+        time = 8.h
+    }
+    withName:mergeCohortVCFsOverIntervals {
+        cpus = 3
+        memory = 30.GB
         time = 8.h
     }
 }
