--- a/configs/process-resources.config
+++ b/configs/process-resources.config
@@ -50,9 +50,9 @@ process {
         time = { 8.h * task.attempt }
     }
     withName:callVariantsPerIntervalPerSample {
-        cpus = 3
-        memory = 30.GB
-        time = { 8.h * task.attempt }
+        cpus = 1
+        memory = { 5.GB * task.attempt }
+        time = { 3.h * task.attempt }
     }
     withName:consolidateSampleGVCFsPerInterval {
         cpus = 3
